// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Divider passes the snapshot test for different length modes 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={
      {
        "backgroundColor": "#58617A",
      }
    }
    animatedStyle={
      {
        "value": {
          "backgroundColor": "#58617A",
        },
      }
    }
    collapsable={false}
    style={
      {
        "backgroundColor": "#58617A",
        "height": 1,
        "width": "50%",
      }
    }
  />
  <View
    animate={
      {
        "backgroundColor": "#ee82ee",
      }
    }
    animatedStyle={
      {
        "value": {
          "backgroundColor": "#ee82ee",
        },
      }
    }
    collapsable={false}
    style={
      {
        "backgroundColor": "#ee82ee",
        "height": 20,
        "width": 1,
      }
    }
  />
</View>
`;

exports[`Atoms/Divider passes the snapshot test in dark mode 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={
      {
        "backgroundColor": "#58617A",
      }
    }
    animatedStyle={
      {
        "value": {
          "backgroundColor": "#58617A",
        },
      }
    }
    collapsable={false}
    style={
      {
        "backgroundColor": "#58617A",
        "height": 1,
        "width": "100%",
      }
    }
  />
  <View
    animate={
      {
        "backgroundColor": "#58617A",
      }
    }
    animatedStyle={
      {
        "value": {
          "backgroundColor": "#58617A",
        },
      }
    }
    collapsable={false}
    style={
      {
        "backgroundColor": "#58617A",
        "height": "100%",
        "width": 1,
      }
    }
  />
</View>
`;

exports[`Atoms/Divider passes the snapshot test in light mode 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={
      {
        "backgroundColor": "#E4E9F2",
      }
    }
    animatedStyle={
      {
        "value": {
          "backgroundColor": "#E4E9F2",
        },
      }
    }
    collapsable={false}
    style={
      {
        "backgroundColor": "#E4E9F2",
        "height": 1,
        "width": "100%",
      }
    }
  />
  <View
    animate={
      {
        "backgroundColor": "#E4E9F2",
      }
    }
    animatedStyle={
      {
        "value": {
          "backgroundColor": "#E4E9F2",
        },
      }
    }
    collapsable={false}
    style={
      {
        "backgroundColor": "#E4E9F2",
        "height": "100%",
        "width": 1,
      }
    }
  />
</View>
`;
